Fixing colour of arrow for collapsed boxes that doesn't show on dark colour. Fixing #32

--- a/custom.scss
+++ b/custom.scss
@@ -173,6 +173,12 @@ a {
 
 // Callout customization
 
+// Override Quarto's callout toggle icon for callout-note
+
+div.callout-note .callout-toggle::before {
+  background-image: url("data:image/svg+xml,%3Csvg%20xmlns='http://www.w3.org/2000/svg'%20width='16'%20height='16'%20fill='%23fff'%20viewBox='0%200%2016%2016'%3E%3Cpath%20fill-rule='evenodd'%20d='M1.646%204.646a.5.5%200%200%201%20.708%200L8%2010.293l5.646-5.647a.5.5%200%200%201%20.708.708l-6%206a.5.5%200%200%201-.708%200l-6-6a.5.5%200%200%201%200-.708z'/%3E%3C/svg%3E");
+}
+
 div.callout-note {
   border-left: solid 1px #7E576B !important;
   border-right: solid 1px #7E576B !important;
